Fixed spaceDot in whitespace with ascii char

--- a/styles/main.styl
+++ b/styles/main.styl
@@ -46,12 +46,10 @@ pre
     overflow hidden
     white-space: pre-wrap
 
-.fa-circle
-    margin-right 4px
-    margin-left 4px
-    font-size 0.2em
-    opacity 0.2
-    vertical-align: middle
+span.spaceDot
+    font-size 1em
+    color rgba(0, 0, 0, 0.2)
+    vertical-align: top
 
 // ******************************
 // Main Interface
